--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<html lang="pl-PL">
+﻿<html lang="pl-PL">
 <html>
   <head>
     <meta charset="utf-8">
     <title> Tomasz Raiński </title>
   <head>
+	<A HREF="poczta_rainski.html"> Tutaj jest link do poczty </A><br>
+	<A HREF="plik_rainski.html"> Tutaj jest link do pliku </A><br>
+	<a href="#skok_srodek">kliknij aby skoczyć na srodek tekstu</a><br>
+	<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>	
+	<A HREF="tabela_rainski.html"> Tutaj jest link do tabeli </A><br>	
+	<A HREF="formularz_rainski.html"> Tutaj jest link do formularza </A><br>
+	<a name="skok_poczatek"></a>
    <body bgcolor="silver">
     <font color="blue" size="7" face="Arial"> Tomasz </font> </p> <br>
     <font color="blue" size="6" face="Arial"> Tomasz </font> </p> <br>
@@ -31,7 +38,15 @@
 	<p align="center"> <font color="purple" size="6" face="Verdana"> <u>Data Urodzenia:</u> 5 wrzesnia 2005 </font></p>
 	<p align="left"> H<sub>2</sub>SO<sub>4</sub> </p> <br>
 	<p align="left"> x<sup>2</sup> = x*x </p> <br>
-
+	
+	<a name="skok_srodek"></a>
+	<A HREF="poczta_rainski.html"> Tutaj jest link do poczty </A><br>
+	<A HREF="plik_rainski.html"> Tutaj jest link do pliku </A><br>
+	<a href="#skok_poczatek">kliknij aby skoczyć na poczatek tekstu</a><br>
+	<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>	
+	<A HREF="tabela_rainski.html"> Tutaj jest link do tabeli </A><br>	
+	<A HREF="formularz_rainski.html"> Tutaj jest link do formularza </A><br>
+	
     <H1 ALIGN=center> Żart o Ojcu i Synu </H1>
     <fieldset>
 	<legend>Syn z Angli</legend>
@@ -101,7 +116,7 @@
 	<LI> AMD Radeon
 	<LI> Intel Iris Xe
 	</OL>
-	
+
 	<h3> poniżej będą trzy poziomy numerowania/wyliczenia z różnymi rodzajami numerowania/wyliczenia</h3>
 	<h3> Ty zaproponuj swoje, związane z informatyką</h3>
 	<OL>
@@ -124,6 +139,12 @@
 				<LI> Zarządzanie dostępem
 			</UL>
 	</OL>
-
+	<a name="skok_koniec"></a>
+	<A HREF="poczta_rainski.html"> Tutaj jest link do poczty </A><br>
+	<A HREF="plik_rainski.html"> Tutaj jest link do pliku </A><br>
+	<a href="#skok_poczatek">kliknij aby skoczyć na poczatek tekstu</a><br>
+	<a href="#skok_srodek">kliknij aby skoczyć na srodek tekstu</a><br>	
+	<A HREF="tabela_rainski.html"> Tutaj jest link do tabeli </A><br>	
+	<A HREF="formularz_rainski.html"> Tutaj jest link do formularza </A><br>
    <body>
 <html>
