--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-﻿<html lang="pl-PL">
-<html>
+<!DOCTYPE html>
+<html lang="pl-PL">
   <head>
     <meta charset="utf-8">
     <title> Tomasz Raiński </title>
@@ -11,7 +11,7 @@
 	<A HREF="tabela_rainski.html"> Tutaj jest link do tabeli </A><br>	
 	<A HREF="formularz_rainski.html"> Tutaj jest link do formularza </A><br>
 	<a name="skok_poczatek"></a>
-   <body bgcolor="silver">
+    <body bgcolor="silver">
     <font color="blue" size="7" face="Arial"> Tomasz </font> </p> <br>
     <font color="blue" size="6" face="Arial"> Tomasz </font> </p> <br>
     <font color="blue" size="5" face="Arial"> Tomasz </font> </p> <br>
