--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title> Tomasz Raiński </title>
-  <head>
-	<A HREF="poczta_rainski.html"> Tutaj jest link do poczty </A><br>
-	<A HREF="plik_rainski.html"> Tutaj jest link do pliku </A><br>
+	<a HREF="poczta_rainski.html"> Tutaj jest link do poczty </A><br>
+	<a HREF="plik_rainski.html"> Tutaj jest link do pliku </A><br>
 	<a href="#skok_srodek">kliknij aby skoczyć na srodek tekstu</a><br>
 	<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>	
-	<A HREF="tabela_rainski.html"> Tutaj jest link do tabeli </A><br>	
-	<A HREF="formularz_rainski.html"> Tutaj jest link do formularza </A><br>
+	<a HREF="tabela_rainski.html"> Tutaj jest link do tabeli </A><br>	
+	<a HREF="formularz_rainski.html"> Tutaj jest link do formularza </A><br>
 	<a name="skok_poczatek"></a>
     <body bgcolor="silver">
     <font color="blue" size="7" face="Arial"> Tomasz </font> </p> <br>
