--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<a href="#skok_koniec">kliknij aby skoczyć na koniec tekstu</a><br>	
 	<a HREF="tabela_rainski.html"> Tutaj jest link do tabeli </a><br>	
 	<a HREF="formularz_rainski.html"> Tutaj jest link do formularza </a><br>
-	<a name="skok_poczatek"></a>
+	<a name="skok_poczatek"></a><br>
     <body bgcolor="silver">
     <font color="blue" size="7" face="Arial"> Tomasz </font> </p> <br>
     <font color="blue" size="6" face="Arial"> Tomasz </font> </p> <br>
