--- a/tabela_rainski.html
+++ b/tabela_rainski.html
@@ -1,12 +1,71 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl-PL">
-<html>
-	 <head>
-	  <meta charset="utf-8">
-	  <title> tabela-Raiński </title>
-	 </head>
-	 <body>
-	  	tutaj bedzie tabela <br>
-		<A HREF="index.html">Wróć</A>
-	 <body>
-<html>
+<head>
+  <meta charset="utf-8">
+  <title>Tabela-Raiński</title>
+</head>
+<body style="background-color: #f0f0f0; font-family: Arial, sans-serif;">
+
+<table border="1" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+  <caption style="background-color:white; color: black; padding: 10px;">Tomasz Raiński dane komputerowe</caption>
+
+  <tr style="background-color: #ed7c31; color: black;">
+    <th>Procesor</th>
+    <th>Ilość Rdzeni</th>
+    <th>Ilość Wątków</th>
+    <th>Taktowanie bazowe</th>
+    <th>Taktowanie maksymalne</th>
+    <th>Technologia produkcji</th>
+    <th>Pamięć Cache</th>
+  </tr>
+  <tr style="background-color: #bf8f00;">
+    <td>Intel Core i5-11600K</td>
+    <td>6</td>
+    <td>12</td>
+    <td>3.9 GHz</td>
+    <td>4.9 GHz</td>
+    <td>14 nm</td>
+    <td>12 MB</td>
+  </tr>
+  <tr style="background-color: #805b00;">
+    <td>AMD Ryzen 7 5800X</td>
+    <td>8</td>
+    <td>16</td>
+    <td>3.8 GHz</td>
+    <td>4.7 GHz</td>
+    <td>7 nm</td>
+    <td>32 MB</td>
+  </tr>
+  <tr style="background-color: #805b00;">
+    <td>Intel Core i9-11900K</td>
+    <td>8</td>
+    <td>-</td>
+    <td>3.5 GHz</td>
+    <td>5.3 GHz</td>
+    <td>14 nm</td>
+    <td>16 MB</td>
+  </tr>
+  <tr style="background-color: #805b00;">
+    <td>Intel Core i7-11700K</td>
+    <td>8</td>
+    <td>-</td>
+    <td>3.6 GHz</td>
+    <td>5.0 GHz</td>
+    <td>14 nm</td>
+    <td>16 MB</td>
+  </tr>
+  <tr style="background-color: #bdd6ee;">
+    <td>AMD Ryzen 9 5900X</td>
+    <td>12</td>
+    <td>24</td>
+    <td>3.7 GHz</td>
+    <td>4.8 GHz</td>
+    <td>7 nm</td>
+    <td>64 MB</td>
+  </tr>
+</table>
+
+<a href="index.html" style="display: block; margin-top: 20px; padding: 10px; background-color: #008CBA; color: white; text-align: center; text-decoration: none;">Wróć</a>
+
+</body>
+</html>
