--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -1,12 +1,26 @@
-﻿<!DOCTYPE html>
-<html lang="pl-PL">
+<!DOCTYPE html>
 <html>
-	 <head>
-	  <meta charset="utf-8">
-	  <title> formularz-Raiński </title>
-	 </head>
-	 <body>
-	  	tutaj bedzie formularz <br>
-		<A HREF="index.html">Wróć</A>
-	 <body>
-<html>
+  <head>
+    <title>Formularz</title>
+  </head>
+  <body>
+    <h1>Formularz</h1>
+
+    <form>
+      <label for="imie">Imię:</label>
+      <input type="text" id="imie" name="imie" required><br>
+
+      <label for="nazwisko">Nazwisko:</label>
+      <input type="text" id="nazwisko" name="nazwisko" required><br>
+
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" name="email" required><br>
+
+      <label for="organizacja">Organizacja:</label>
+      <input type="text" id="organizacja" name="organizacja" required><br>
+
+      <input type="submit" value="Wyślij">
+    </form>
+    
+  </body>
+</html>
