--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -7,11 +7,9 @@
     <h1>Formularz</h1>
 
     <form>
-      <label for="imie">Imię:</label>
+      <label for="imie">Imię i nazwisko:</label>
       <input type="text" id="imie" name="imie" required><br>
 
-      <label for="nazwisko">Nazwisko:</label>
-      <input type="text" id="nazwisko" name="nazwisko" required><br>
 
       <label for="email">E-mail:</label>
       <input type="email" id="email" name="email" required><br>
