--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -7,8 +7,8 @@
     <h1>Formularz</h1>
 
     <form>
-      <label for="imie">Imię i nazwisko:</label>
-      <input type="text" id="imie" name="imie" required><br>
+      <label for="Imię i nazwisko">Imię i nazwisko:</label>
+      <input type="text" id="Imię i nazwisko" name="imie i nazwsiko" required><br>
 
 
       <label for="email">E-mail:</label>
