--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -1,24 +1,30 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Formularz</title>
-  </head>
-  <body>
-    <h1>Formularz</h1>
-
-    <form>
-      <label for="Imię i nazwisko">Imię i nazwisko:</label>
-      <input type="text" id="Imię i nazwisko" name="imie i nazwsiko" required><br>
-
-
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required><br>
-
-      <label for="organizacja">Organizacja:</label>
-      <input type="text" id="organizacja" name="organizacja" required><br>
-
-      <input type="submit" value="Wyślij">
-    </form>
-    
-  </body>
-</html>
+<form>
+  <label for="name">Imię:</label>
+  <input type="text" id="name" name="name" required><br>
+  
+  <label for="surname">Nazwisko:</label>
+  <input type="text" id="surname" name="surname" required><br>
+  
+  <label for="email">E-mail:</label>
+  <input type="email" id="email" name="email" required><br>
+  
+  <label for="organization">Organizacja:</label>
+  <input type="text" id="organization" name="organization" required><br>
+  
+  <label for="day">Wybierz dzień udziału:</label><br>
+  <select id="day" name="day" required>
+    <option value="">Wybierz...</option><br>
+    <option value="Dzień 1">Dzień 1</option>
+    <option value="Dzień 2">Dzień 2</option>
+    <option value="Dzień 3">Dzień 3</option>
+  </select><br>
+    <label for="day">ograniczenia związane z dietą:</label><br>
+  <select id="day" name="day" required>
+    <option value="">Wybierz...</option><br>
+    <option value="Dzień 1">brak</option>
+    <option value="Dzień 2">Dzień 2</option>
+    <option value="Dzień 3">Dzień 3</option>
+  </select><br>
+  
+  <input type="submit" value="Wyślij">
+</form>
