--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: #34ebe5;">
 
-  <form action="mailto:twoja@adres.email" method="post">
+  <form action="mailto:rainski1234@gmail.com" method="post">
     <label for="name">1. Imię i nazwisko *</label>
     <input type="text" id="name" name="name" required><br>
 
