--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -50,7 +50,13 @@
       <option value="Gotówka">Gotówka</option>
       <option value="Telefon">Płatność telefonem</option>
     </select><br>
-    <input type="submit" value="Zarejestruj">
+    <tr>
+                <td style="text-align: center;"><input type="submit" value="wyślij" style="height:60px; width:500px">
+            </tr>
+            <tr>
+                <td style="text-align: center;"><button onclick="alert('numer telefonu: 233 456 759, email: rainski@gmail.com ')" style="height:60px;width:500px">kontakt</button>
+                <td style="text-align: center;"><button onclick="alert('autorem formularza jest Tomasz Rainski')" style="height:60px;width:500px">autor</button>
+            </tr>
   </form>
 
 </body>
