--- a/formularz_rainski.html
+++ b/formularz_rainski.html
@@ -51,11 +51,12 @@
       <option value="Telefon">Płatność telefonem</option>
     </select><br>
     <tr>
-                <td style="text-align: center;"><input type="submit" value="wyślij" style="height:20px; width:300px"></br>
+                <td style="text-align: center;"><input type="submit" value="wyślij" style="height:60px; width:250px">
+                <td style="text-align: center;"><input type="reset" value="czyść" style="height:60px; width:250px"><br>
             </tr>
             <tr>
-                <td style="text-align: center;"><button onclick="alert('numer telefonu: 233 456 759, email: rainski@gmail.com ')" style="height:20px;width:300px">kontakt</button></br>
-                <td style="text-align: center;"><button onclick="alert('autorem formularza jest Tomasz Rainski')" style="height:20px;width:300px">autor</button>
+                <td style="text-align: center;"><button onclick="alert('numer telefonu: 157 456 029, email: rainski1234@gmail.com ')" style="height:60px;width:250px">kontakt</button>
+                <td style="text-align: center;"><button onclick="alert('autorem formularza jest Tomasz Raiński')" style="height:60px;width:250px">autor</button>
             </tr>
   </form>
 
